--- a/sign_language.ipynb
+++ b/sign_language.ipynb
@@ -1196,7 +1196,7 @@
         "colab": {}
       },
       "source": [
-        "from sklearn.metrics import accuracy_score"
+        "from sklearn.metrics import accuracy_score, f1_score"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1248,7 +1248,7 @@
       "metadata": {
         "id": "_sHeJ2OvZC7V",
         "colab_type": "code",
-        "outputId": "eefd7c85-9081-48c2-e3b8-2dc8af0bc123",
+        "outputId": "21d4c4d4-8b04-4eb2-af8b-4f8715a25592",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -1257,7 +1257,7 @@
       "source": [
         "accuracy_score(labels_test_enc, pred.round())"
       ],
-      "execution_count": 30,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1269,7 +1269,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 30
+          "execution_count": 34
         }
       ]
     },
@@ -1277,6 +1277,36 @@
       "cell_type": "code",
       "metadata": {
         "id": "vkH1GZhQQgN7",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "2bff75ce-3cee-44de-98b3-13e998ab31af"
+      },
+      "source": [
+        "f1_score(labels_test_enc, pred.round(),average = 'weighted')"
+      ],
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9207352527033286"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "a1KJhQbtCZvL",
         "colab_type": "code",
         "colab": {}
       },
